# n8n-helm-chart

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Chart.yaml  Makefile  README.md  artifacthub-repo.yml  commands.shj  deploy.yaml  helmfile.yaml  hooks.Dockerfile  old_values.yaml  out.yaml  pyproject.toml  values.yaml
.apolo/: applications.yaml
.apolo/src/apolo_apps_n8n/: __init__.py  app_types.py  inputs_processor.py  outputs_processor.py
.apolo/src/apolo_apps_n8n/schemas/: N8nAppInputs.json  N8nAppOutputs.json
.apolo/tests/: conftest.py
.apolo/tests/unit/: test_stub.py
.apolo/tests/unit/n8n/: test_input_generation.py  test_outputs_generation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  conventional-commits-check.yaml  dependabot-auto-merge.yaml  lint-test.yaml  lint.yaml  publish-ghcr.yaml  push.yaml  release.yaml  test.yaml
charts/: redis-15.7.6.tgz
charts/n8n/: Chart.yaml  README.md  config.yml  values.yaml
charts/n8n/templates/: NOTES.txt  _helpers.tpl  _service.webhooks.yaml  configmap.mcp.yaml  configmap.webhook.yaml  configmap.worker.yaml  configmap.yaml  deployment.mcp.yaml  deployment.webhook.yaml  deployment.webhooks.yaml  deployment.worker.yaml  deployment.yaml  extra.objects.yaml  extraManifests.yaml  hpa.webhook.yaml  hpa.worker.yaml  hpa.yaml  ingress.yaml  pvc.yaml  resources.yaml  secret.mcp.yaml  secret.webhook.yaml  secret.worker.yaml  secret.yaml  service-headless.yaml  service.mcp.yaml  service.webhook.yaml  service.webhooks.yaml  service.yaml  serviceaccount.yaml  statefulset.worker.yaml  statefulset.yaml
charts/n8n/templates/tests/: extra.yaml  test-connection.yaml
examples/: 8gears.yaml  README.md  pg_cluster_example.yaml  values_full.yaml  values_local.yaml  values_prodlike.yaml  values_small.yaml  values_small_prod.yaml  values_stateful.yaml
templates/: NOTES.txt  _helpers.tpl  deployment.webhooks.yaml  deployment.worker.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
templates/tests/: test-connection.yaml
